--- a/src/templates/empleado/cita/index.html
+++ b/src/templates/empleado/cita/index.html
@@ -5,34 +5,22 @@
 <div class="row col-12 text-center">
     <h1 class="titulo padding text-bold text-large">Clinica ########</h1>
     <!-- Aqui va un for para poder visualizar las colas de paciente -->
+    {% for paciente in cola_pacientes %}
     <div class="col-3">
-        <!-- Aqui irian cards o algo para que se puedan visualizar de mejor forma cada paciente -->
         <div class="card card-thick-border text-bold">
-            A01
+            {{ paciente.numero_documento }}
         </div>
     </div>
+    {% if not loop.last %}
     <div class="col">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
-          </svg>
+        </svg>
     </div>
-    <div class="col-3">
-        <div class="card card-thick-border text-bold">
-            A02
-        </div>
-    </div>
-    <div class="col">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
-          </svg>
-    </div>
-    <div class="col-3">
-        <div class="card card-thick-border text-bold">
-            A03
-        </div>
-    </div>
+    {% endif %}
+    {% endfor %}
     <br><br>
-    <form action="#" class="text-bold">
+    <form action="#" method="post" class="text-bold">
         <div class="row-mb-3 card padding card-thick-border">
             <div class="input-group mb-3">
                 <span class="input-group-text">
