--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
         <div class="card card-thick-border" style="align-items: center;">
             <img src="{{ url_for('static', filename='img/paciente.png') }}" class="card-img-top" alt="Soy un paciente">
             <div class="card-body">
-                <a href="/paciente">
+                <a href="/ver_pacientes">
                     <button class="btn btn-outline-info btn-lg btn-thick-border">Soy un paciente</button>
                 </a>
             </div>
