--- a/src/templates/empleado/cita/index.html
+++ b/src/templates/empleado/cita/index.html
@@ -71,6 +71,20 @@
                 <select id="horarios" class="form-select" name="hora_cita" style="display:none;" required>
                     <!-- Los horarios se llenarán dinámicamente con JavaScript -->
                 </select>
+                <span class="input-group-text">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
+                        <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
+                    </svg>
+                </span>
+                <select  id="consultorio" class="form-select" name="consultorio" required>
+                    <option selected>Seleccione...</option>
+                    <option value="C1">Consultorio 1</option>
+                    <option value="C2">Consultorio 2</option>
+                    <option value="C3">Consultorio 3</option>
+                </select>
+                <button type="button" class="btn btn-outline-secondary">Consultar</button>
+                <span id="disponibilidadMensaje"></span>
             </div>
             <hr>
             <div class="alinear-botones">
@@ -79,8 +93,61 @@
             </div>
         </div>
     </form>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="alert alert-danger" role="alert">
+                {{ messages[0] }}
+            </div>
+        {% endif %}
+    {% endwith %}
 </div>
 
+<form action="/buscar_consultorio" method="post">
+    <div class="input-group mb-3">
+        <span class="input-group-text">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+              </svg>
+        </span>
+        <input type="date" class="form-control" name="fecha_cita2" required>
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+            </svg>
+        </span>
+        <select class="form-select" id="turno" name="turno" onchange="mostrarHorarios2(this.value)" required>
+            <option selected>Seleccione...</option>
+            <option value="Mañana">Mañana</option>
+            <option value="Tarde">Tarde</option>
+            <option value="Noche">Noche</option>
+        </select>
+        <select id="horarios2" class="form-select" name="hora_cita2" style="display:none;" required>
+            <!-- Los horarios se llenarán dinámicamente con JavaScript -->
+        </select>
+        <span class="input-group-text">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
+                <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
+            </svg>
+        </span>
+        <select  id="consultorio" class="form-select" name="consultorio2" required>
+            <option selected>Seleccione...</option>
+            <option value="C1">Consultorio 1</option>
+            <option value="C2">Consultorio 2</option>
+            <option value="C3">Consultorio 3</option>
+        </select>
+        <button type="submit" class="btn btn-outline-secondary">Consultar</button>
+        <span id="disponibilidadMensaje"></span>
+    </div>
+</form>
+{% if existe %}
+    <p>Si hay una cita disponible({{ existe }})</p>
+{% else %}
+    <p>No hay una cita disponible({{ existe }})</p>
+{% endif %}
 <script>
 function mostrarHorarios(turno) {
     var horarios = document.getElementById("horarios");
@@ -124,5 +191,49 @@ function mostrarHorarios(turno) {
     horarios.style.display = "block";
 }
 </script>
+
+<script>
+    function mostrarHorarios2(turno) {
+        var horarios = document.getElementById("horarios2");
+        if (turno === "Mañana") {
+            horarios.innerHTML = `
+                <option value="08:00">08:00</option>
+                <option value="08:30">08:30</option>
+                <option value="09:00">09:00</option>
+                <option value="09:30">09:30</option>
+                <option value="10:00">10:00</option>
+                <option value="10:30">10:30</option>
+                <option value="11:00">11:00</option>
+                <option value="11:30">11:30</option>
+                <!-- Agrega los horarios de la mañana aquí -->
+            `;
+        } else if (turno === "Tarde") {
+            horarios.innerHTML = `
+                <option value="12:00">12:00</option>
+                <option value="12:30">12:30</option>
+                <option value="13:00">13:00</option>
+                <option value="13:30">13:30</option>
+                <option value="14:00">14:00</option>
+                <option value="14:30">14:30</option>
+                <option value="15:00">15:00</option>
+                <option value="15:30">15:30</option>
+                <!-- Agrega los horarios de la tarde aquí -->
+            `;
+        } else if (turno === "Noche") {
+            horarios.innerHTML = `
+                <option value="16:00">16:00</option>
+                <option value="16:30">16:30</option>
+                <option value="17:00">17:00</option>
+                <option value="17:30">17:30</option>
+                <option value="18:00">18:00</option>
+                <option value="18:30">18:30</option>
+                <option value="19:00">19:00</option>
+                <option value="19:30">19:30</option>
+                <!-- Agrega los horarios de la noche aquí -->
+            `;
+        }
+        horarios.style.display = "block";
+    }
+    </script>
 
 {% endblock %}
