--- a/src/templates/paciente/index.html
+++ b/src/templates/paciente/index.html
@@ -41,6 +41,15 @@
 </div>
 
 <script>
+// Función para recargar la página cada 5 segundos
+function recargarPagina() {
+            setTimeout(function() {
+                location.reload();
+            }, 1000); // 1000 milisegundos = 1 segundo
+}
+// Llamar a la función cuando la página se cargue
+window.onload = recargarPagina;
+
 document.getElementById('generar-ticket').addEventListener('click', function() {
     fetch('/agregar_paciente', {
         method: 'POST',
