--- a/src/templates/empleado/index.html
+++ b/src/templates/empleado/index.html
@@ -18,6 +18,12 @@
                     Historial medico del paciente
                 </button>
             </a>
+            <br>
+            <a href="/empleado/dni">
+                <button class="btn btn-outline-info btn-lg btn-thick-border">
+                    Buscar paciente por Nro de Documento
+                </button>
+            </a>
         </div>
     </div>
 </div>
